--- a/index.html
+++ b/index.html
@@ -8,10 +8,35 @@
 </head>
 <body>
     <h2>Calculator by CLint Rizzo</h2>
-    <div class="container">
-        <input class="inputBox" type="text" name="output" placeholder="0">
+    <div class='container'>
+        <form name='calc'>
+            <input class='inputBox' type='text' name='output' placeholder='0'>
 
-        
+            <input class='button1' type='button' value='1'/>
+            <input class='button2' type='button' value='2'/>
+            <input class='button3' type='button' value='3'/>
+            <input class='button/' type='button' value='/'/>
+
+            <input class='button4' type='button' value='4'/>
+            <input class='button5' type='button' value='5'/>
+            <input class='button6' type='button' value='6'/>
+            <input class='button*' type='button' value='X'/>
+
+            <input class='button7' type='button' value='7'/>
+            <input class='button8' type='button' value='8'/>
+            <input class='button9' type='button' value='9'/>
+            <input class='button-' type='button' value='-'/>
+
+            <input class='button(' type='button' value='('/>
+            <input class='button)' type='button' value=')'/>
+            <input class='button0' type='button' value='0'/>
+            <input class='button+' type='button' value='+'/>
+
+            <input class='buttonc' type='button' value='c'/>
+            <input class='button.' type='button' value='.'/>
+            <input class='button=' type='button' value='='/>
+            <input class='button%' type='button' value='%'/>
+        </form>
     </div>
     <footer>@ Clint Rizzo</footer>
 </body>
