fixed spelling error

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Calculator</title>
 </head>
 <body>
-    <h2>Calculator by CLint Rizzo</h2>
+    <h2>Calculator by Clint Rizzo</h2>
     <div class='container'>
         <form name='calc'>
             <input class='inputBox' type='text' name='output' placeholder='0'>
